force-app/main/default/objects/SC_Matrix_Exception_Approval__c/SC_Matrix_Exception_Approval__c.object-meta.xml
<CustomObject>
    <label>SC Matrix Exception/Approval</label>
    <nameField>
        <displayFormat>SCMEA-{000000000}</displayFormat>
        <label>SC Matrix Exception/Approval</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SC Matrix Exception/Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>