force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Approver Comments</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>