force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Dynamic_Approval_Link__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Approval_Link__c</fullName>
    <formula>HYPERLINK(
    SUBSTITUTE(LEFT($Api.Partner_Server_URL_260, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_260) - 1), &quot;my.salesforce.com&quot;, &quot;lightning.force.com&quot;) &amp; &quot;/lightning/n/SCM_Home&quot;, 
    &quot;Click here to Review and Take Action&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dynamic Approval Link</label>
    <type>Text</type>
</CustomField>