force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <formula>Requested_User_Story__r.copado__Environment__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Environment</label>
    <type>Text</type>
</CustomField>