force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Expiration_time__c.field-meta.xml
<CustomField>
    <fullName>Expiration_time__c</fullName>
    <label>Expiration time</label>
    <type>DateTime</type>
</CustomField>