force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Justifications__c.field-meta.xml
<CustomField>
    <fullName>Justifications__c</fullName>
    <label>Justification</label>
    <type>TextArea</type>
</CustomField>