force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Linked_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Linked_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipName>SCM_Exceptions1</relationshipName>
    <type>Lookup</type>
</CustomField>