force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Needs_to_be_Approved_by__c.field-meta.xml
<CustomField>
    <fullName>Needs_to_be_Approved_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Developer from Linked user story</description>
    <label>Needs to be Approved by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SCM_Exceptions1</relationshipName>
    <type>Lookup</type>
</CustomField>