force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Developer from Requested user story</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SCM_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>