force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Requested_Environment__c.field-meta.xml
<CustomField>
    <fullName>Requested_Environment__c</fullName>
    <label>Requested Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>