force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Requested_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Requested_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipName>SCM_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>