force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Reviewer__c</referenceTo>
    <relationshipName>SCM_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>