force-app/main/default/objects/SC_Matrix_Exception_Approval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Waiting for Approval</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Interim Approval</fullName>
                <isActive>false</isActive>
                <label>Interim Approval</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
            <value>
                <fullName>On-Hold</fullName>
                <isActive>false</isActive>
                <label>On-Hold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>