force-app/main/default/objects/SC_Matrix_Exception_Approval__c/validationRules/Prevent_Status_Update_By_Requestor.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Status_Update_By_Requestor</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Type__c, &quot;Approval Process&quot;),
    NOT(ISPICKVAL(Status__c, &apos;Expired&apos;)) ,
    OR(
        ISCHANGED(Status__c),
        ISCHANGED(Comments__c)
    ),
    $User.Id &lt;&gt; Needs_to_be_Approved_by__c
)</errorConditionFormula>
    <errorMessage>You are not allowed to update the Status or Approver Comments.</errorMessage>
</ValidationRule>