force-app/main/default/objects/SC_Matrix_Exception_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reviewer__c</columns>
    <columns>Requested_User_Story__c</columns>
    <columns>Linked_User_Story__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>